<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color4"
    tools:context=".HomeActivity">


    <TextView
        android:id="@+id/tvAddNote"
        style="@style/TextAppearance.Compat.Notification.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="@string/addNewNote"
        android:textColor="@color/black"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/createNoteTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/newNoteTitle"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/tvAddNote"
        app:layout_constraintStart_toStartOf="@+id/tvAddNote"
        app:layout_constraintTop_toBottomOf="@+id/tvAddNote" />

    <EditText
        android:id="@+id/createContentOfNote"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/newNoteContent"
        android:minHeight="48dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/createNoteTitle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/createNoteTitle"
        app:layout_constraintTop_toBottomOf="@+id/createNoteTitle" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSaveNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        app:backgroundTint="@color/skyblue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createContentOfNote"
        app:layout_constraintVertical_bias="1.0"
        app:maxImageSize="40dp"
        app:srcCompat="@drawable/ic_baseline_save" />


</androidx.constraintlayout.widget.ConstraintLayout>